--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Yao Zhuo's Personal Homepage"
 title_separator          : "-"
 name                     : &name "Yao Zhuo(姚卓)"
 description              : &description "Second-year master's student from xaut"
